--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@
             <div class="grid md:grid-cols-2 gap-12">
                 <!-- Hello World Hackathon -->
                 <div class="bg-gradient-to-br from-blue-50 to-cyan-50 p-8 rounded-lg shadow-lg card-hover">
-                    <img src="https://placehold.co/400x200?text=Hello+World+Hackathon" alt="Hello World Hackathon"
-                        class="w-full h-40 object-cover rounded mb-4">
+                    <img src="./src/pics/hw.jpg" alt="Hello World Hackathon"
+                        class="w-full h-70 object-cover rounded mb-4">
                     <div class="flex items-center mb-6">
                         <i class="fas fa-rocket text-3xl text-blue-500 mr-4"></i>
                         <h3 class="text-2xl font-bold">Hello World Hackathon</h3>
@@ -297,8 +297,8 @@
 
                 <!-- CS Games -->
                 <div class="bg-gradient-to-br from-red-50 to-orange-50 p-8 rounded-lg shadow-lg card-hover">
-                    <img src="https://placehold.co/400x200?text=CS+Games" alt="CS Games"
-                        class="w-full h-40 object-cover rounded mb-4">
+                    <img src="./src/pics/csgames.jpg" alt="CS Games"
+                        class="w-full h-70 object-cover rounded mb-4">
                     <div class="flex items-center mb-6">
                         <i class="fas fa-trophy text-3xl text-red-500 mr-4"></i>
                         <h3 class="text-2xl font-bold">CS Games</h3>
@@ -320,8 +320,8 @@
 
                 <!-- CyberSci -->
                 <div class="bg-gradient-to-br from-green-50 to-lime-50 p-8 rounded-lg shadow-lg card-hover">
-                    <img src="https://placehold.co/400x200?text=CyberSci" alt="CyberSci"
-                        class="w-full h-40 object-cover rounded mb-4">
+                    <img src="./src/pics/cybersci.jpg" alt="CyberSci"
+                        class="w-full h-70 object-cover rounded mb-4">
                     <div class="flex items-center mb-6">
                         <i class="fas fa-shield-alt text-3xl text-green-500 mr-4"></i>
                         <h3 class="text-2xl font-bold">CyberSci</h3>
@@ -341,8 +341,8 @@
 
                 <!-- NorthSec -->
                 <div class="bg-gradient-to-br from-blue-50 to-cyan-50 p-8 rounded-lg shadow-lg card-hover">
-                    <img src="https://placehold.co/400x200?text=NorthSec" alt="NorthSec"
-                        class="w-full h-40 object-cover rounded mb-4">
+                    <img src="./src/pics/nsec.jpg" alt="NorthSec"
+                        class="w-full h-70 object-cover rounded mb-4">
                     <div class="flex items-center mb-6">
                         <i class="fas fa-flag text-3xl text-blue-500 mr-4"></i>
                         <h3 class="text-2xl font-bold">NorthSec</h3>
@@ -361,8 +361,8 @@
 
                 <!-- ICC -->
                 <div class="bg-gradient-to-br from-purple-50 to-pink-50 p-8 rounded-lg shadow-lg card-hover">
-                    <img src="https://placehold.co/400x200?text=ICC" alt="International Collegiate Contest"
-                        class="w-full h-40 object-cover rounded mb-4">
+                    <img src="./src/pics/icc.jpg" alt="International Collegiate Contest"
+                        class="w-full h-70 object-cover rounded mb-4">
                     <div class="flex items-center mb-6">
                         <i class="fas fa-users-cog text-3xl text-purple-500 mr-4"></i>
                         <h3 class="text-2xl font-bold">International Collegiate Contest (ICC)</h3>
@@ -396,7 +396,7 @@
             </div>
             <!-- Group Photo -->
             <div class="flex justify-center mb-12">
-                <img src="https://placehold.co/800x250?text=Group+Photo" alt="SCS Concordia Team Group Photo"
+                <img src="./src/pics/team.jpg" alt="SCS Concordia Team Group Photo"
                     class="rounded-lg shadow-lg w-full max-w-3xl object-cover">
             </div>
             <!-- Sub-teams Grid -->
